Add hologram command configuration and refactor command registration